<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackIn</string>
    <!--Navigation Drawer-->
    <string name="login">SignIn</string>
    <string name="sign_up">Signup</string>
    <string name="log_book">Log Book</string>
    <string name="log_sheet">Log Sheet</string>
    <string name="log_sheet_inspection">Log Sheet Inspection</string>
    <string name="log_settings">Log Settings</string>
    <string name="carrier_settings">Carrier Settings</string>
    <string name="carrier_address">Set carrier address</string>
    <string name="home_terminal">Set home terminal</string>
    <string name="carrier_device_type">Device type</string>

    <string name="enter_your_dot_number_so_we_can">Enter your DOT # so we can fill in the Carrier Name and Address on your logs</string>
    <string name="dont_have_a_dot_number">"Don't have a DOT #?"</string>
    <string name="dont_know_your_dot_number">"Don't know your DOT #?"</string>
    <string name="dont_see_your_carrier">"Don't see your Carrier?"</string>
    <string name="dont_want_to_connect_with">"Don't want to connect with"</string>
    <string name="dont_want_to_connect_with_this_company">"Don't want to connect with this company?"</string>
    <string name="enter_carrier_details">Enter Carrier Details</string>
    <string name="enter_carrier_details_manually">Enter Carrier Details Manually</string>
    <string name="select_your_carrier">Select your Carrier</string>
    <string name="select_your_company">Select your Company</string>
    <string name="select_your_time_zone_and_cycle_rule">Select your Time Zone and Cycle Rule</string>
    <string name="home_terminal_address">Home Terminal Address</string>
    <string name="home_terminal_city_hint">City</string>
    <string name="home_terminal_state_hint">State</string>
    <string name="home_terminal_street_hint">Street</string>
    <string name="home_terminal_time_zone">Home Terminal Time Zone</string>
    <string name="home_terminal_zip_hint">Zip</string>
    <string name="cycle_rule">Service Cycle Rule</string>
    <string name="cycle_rule_selection">Select Cylce Rule</string>
    <string name="odometer_selection">Select odometer</string>
    <string name="time_zone_selection">Select Time zone</string>
    <string name="state_selection">Select State</string>

    <string name="minutes">minutes</string>
    <string name="minutes_15">15 Minutes Before Violation</string>
    <string name="minutes_30">30 Minutes Before Violation</string>
    <string name="minutes_45">45 Minutes Before Violation</string>
    <string name="mirrors">Mirrors</string>
    <string name="never">Never</string>
    <string name="hour_1">1 Hour Before Violation</string>
    <string name="hour_restart"> Hour Restart </string>
    <string name="hour_restart_on">Hour Restart on</string>
    <string name="messages_today">Today</string>
    <string name="messages_yesterday">Yesterday</string>

    <string name="title_activity_navigation_menu">NavigationMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_eld">ELD</string>
    <string name="nav_engine_inspection">Engine Inspection</string>
    <string name="nav_navigation">Navigation</string>

    <string name="log_sheet_management">Log Sheet Management</string>
    <string name="rule_violation">Rule violation text</string>
    <string name="connectivity_status">LED/ODB Connectivity status</string>
    <string name="instruction_text">Change duty status by moving the slide</string>
    <string name="indication_text">30 minutes break required</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="departing_state">Departing state and city</string>
    <string name="notes">Notes</string>
    <string name="dvins">DVINS</string>
    <string name="sign">SIGN</string>
    <string name="sign_certify">I hereby certify that the entries are true and correct to the best of my knowledge</string>

    <string name="spinner_prompt">Choose Duty status</string>

    <string-array name="duty_status_arrays">
        <item>Choose Duty status</item>
        <item>Off duty</item>
        <item>Sleep birth</item>
        <item>Driving</item>
        <item>On duty</item>
    </string-array>

    <string-array name="dvins_arrays">
        <item>List of vehicle defects</item>

    </string-array>
    <string name="country_selection">Select Country</string>
    <string name="off_duty">OFF DUTY - </string>
    <string name="sleep_birth">SLEEP BIRTH - </string>
    <string name="driving">DRIVING - </string>
    <string name="on_duty">ON DUTY -</string>
    <string name="save_sign">Save signature for future reference</string>
    <string name="confirm_psw_empty">Please enter the  confirm password</string>
    <string name="psw_empty">Please enter the password</string>
    <string name="first_name_empty">Please enter the name</string>
    <string name="password_invalid">Password must contains 1 caps letter , 1 number and 1 special character</string>
    <string name="password_missmatch">Password and confirm password should match</string>
    <string name="psw_min_limit">Password must be 6 characters</string>
    <string name="email_invalid">Please enter valid email id</string>
    <string name="last_name_empty">Please enter the last name</string>
    <string name="phoneNo_empty">Please enter the phone number</string>
    <string name="email_empty">Please enter the email id</string>
    <string name="user_name_empty">Please enter the user name</string>
    <string name="dotid_find_faild">Please enter carrier details manually</string>
    <string name="device_type">Please select device type</string>
    <string name="phoneNo_invalid">Please enter the valid phone number</string>
    <string name="alert_dialog_title_empty">Hello</string>
    <string name="alert_dialog_message_empty">No content available</string>
    <string name="adrr_name" formatted="false">NAME : %S</string>
    <string name="addr_dotId" formatted="false">DotId : %s</string>
    <string name="addr_desc" formatted="false">Description : %s</string>
    <string name="select_country">Select country</string>
</resources>
