<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp">


        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        app:layout_constraintGuide_begin="-5dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/dotdesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/enter_your_dot_number_so_we_can"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/dotdesc"
        android:id="@+id/linearLayout2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dotnumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <EditText
                android:id="@+id/edtDotNumber"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter DOT#" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:textColor="@drawable/button_text_color"
            android:background="@drawable/button_click_effect"
            android:id="@+id/regCarrierSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Search" />
    </LinearLayout>

    <TextView
        android:id="@+id/reqCarrierDOTTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/dont_have_a_dot_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:id="@+id/regManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@drawable/button_text_color"
        android:background="@drawable/button_click_effect"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"

        android:text="@string/enter_carrier_details_manually"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqCarrierDOTTxt"
        app:layout_constraintHorizontal_bias="0.504" />

</android.support.constraint.ConstraintLayout>