<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:id="@+id/linearLayout4">
        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/timeZoneTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_your_time_zone_and_cycle_rule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/terminalTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/home_terminal_time_zone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeZoneTxt"
        app:layout_constraintHorizontal_bias="1.0" />

    <Spinner
        style="@android:style/Widget.Holo.Light.Spinner"
        android:id="@+id/spinnerTimeZone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/terminalTxt"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/cycleRule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="8dp"
        android:textAllCaps="true"
        android:layout_marginRight="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/cycle_rule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTimeZone"
        app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
        style="@android:style/Widget.Holo.Light.Spinner"
        android:id="@+id/spinnerCycleRule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cycleRule" />

    <TextView
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#e5e5e5"
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Options"
        android:textColor="#999999"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCycleRule" />

    <TextView
        android:id="@+id/odometerTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="27dp"
        android:text="ODOMETER"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Spinner
        style="@android:style/Widget.Holo.Light.Spinner"
        android:id="@+id/spinnerOdometer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/odometerTxt" />
</android.support.constraint.ConstraintLayout>