<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:focusable="false"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <trackinlogic.trans.pss.com.trackinlogic.view.LogChartView
        android:layout_above="@+id/child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

<ImageView
    android:paddingRight="16dp"
    android:id="@+id/editView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:src="@drawable/edit"
    android:layout_alignParentRight="true"
    />
<android.support.v7.widget.LinearLayoutCompat
    android:padding="16dp"
    android:id="@+id/child"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/offDuty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/offDuty_status_view"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:text="@string/off_duty"
            android:textStyle="bold"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/offDuty_starting_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:textSize="12sp"
            android:text="08:30 AM, "
            />
        <TextView
            android:id="@+id/offDuty_duration_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:textSize="12sp"
            android:text="4 hours, "
            />
        <TextView
            android:id="@+id/offDuty_city_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:textSize="12sp"
            android:text="Los Angeles"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sleepBirth_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/sleepBirth_status_view"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            android:layout_marginLeft="2dp"
            android:text="@string/sleep_birth"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/sleepBirth_starting_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            android:layout_marginLeft="2dp"
            android:text="12.30 PM, "
            />
        <TextView
            android:id="@+id/sleepBirth_duration_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:textSize="12sp"
            android:text="2 hours, "
            />
        <TextView
            android:id="@+id/sleepBirth_city_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:text="Los Angeles"
            android:textSize="12sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/driving_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/driving_status_view"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:text="@string/driving"
            android:textSize="12sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/driving_starting_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:textSize="12sp"
            android:text="15:00 PM, "
            />
        <TextView
            android:id="@+id/driving_duration_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:text="2 hours, "
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/driving_city_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            android:layout_marginLeft="2dp"
            android:text="New york"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/onDuty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/onDuty_status_view"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:text="@string/on_duty"
            android:textSize="12sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/onDuty_starting_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="12sp"
            android:layout_marginLeft="2dp"
            android:text="17.00 PM, "
            />
        <TextView
            android:id="@+id/onDuty_duration_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:text="1 hour, "
            />
        <TextView
            android:id="@+id/onDuty_city_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:text="New york"
            />
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>

        <View
            android:background="@color/colorGray"
            android:layout_below="@+id/child"
            android:id="@+id/childview"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    </RelativeLayout>
</RelativeLayout>